--- a/src/main/resources/gimnasiouq/adminMembresia.fxml
+++ b/src/main/resources/gimnasiouq/adminMembresia.fxml
@@ -1,14 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="gimnasiouq.viewcontroller.AdminMembresiaViewController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.RecepMembresiaViewController">
+    <children>
+        <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gestión Membresia" wrappingWidth="351.68359375">
+                    <font>
+                        <Font name="Calisto MT Bold" size="30.0" />
+                    </font>
+                </Text>
+                <GridPane>
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="  Plan:" wrappingWidth="58.256507873535156">
+                            <font>
+                                <Font name="Arial" size="14.0" />
+                            </font>
+                        </Text>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="  Costo:" wrappingWidth="58.256507873535156" GridPane.columnIndex="2">
+                            <font>
+                                <Font name="Arial" size="14.0" />
+                            </font>
+                        </Text>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="  Fecha inicio:" wrappingWidth="92.51953125" GridPane.rowIndex="1">
+                            <font>
+                                <Font name="Arial" size="14.0" />
+                            </font>
+                        </Text>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="  Fecha fin:" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                            <font>
+                                <Font name="Arial" size="14.0" />
+                            </font>
+                        </Text>
+                        <TextField fx:id="txtFechaFin" prefHeight="32.0" prefWidth="131.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <TextField fx:id="txtCosto" prefHeight="86.0" prefWidth="138.0" GridPane.columnIndex="3" />
+                        <TextField fx:id="txtFechaInicio" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <ComboBox fx:id="comboBoxPlanMembresia" prefHeight="26.0" prefWidth="163.0" GridPane.columnIndex="1" />
+                    </children>
+                </GridPane>
+                <GridPane alignment="CENTER" prefHeight="44.0" prefWidth="590.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#onNuevo" text="Nuevo" GridPane.halignment="CENTER" />
+                        <Button fx:id="btnAsignar" mnemonicParsing="false" onAction="#onAsignar" text="Asignar" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                        <Button fx:id="btnActualizar" mnemonicParsing="false" onAction="#onActualizar" text="Actualizar" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+                        <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#onEliminar" text="Eliminar" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
+                    </children>
+                </GridPane>
+                <TableView fx:id="tableView" prefHeight="0.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+                    <columns>
+                        <TableColumn fx:id="tcUsuario" prefWidth="75.0" text="Usuario" />
+                        <TableColumn fx:id="tcNombre" prefWidth="75.0" text="Nombre" />
+                        <TableColumn fx:id="tcIdentificacion" prefWidth="75.0" text="Identificación" />
+                        <TableColumn fx:id="tcFechaInicio" prefWidth="75.0" text="Fecha Inicio" />
+                        <TableColumn fx:id="tcFechaFin" prefWidth="75.0" text="Fecha Fin" />
+                        <TableColumn fx:id="tcPlan" prefWidth="75.0" text="Plan" />
+                        <TableColumn fx:id="tcCosto" prefWidth="75.0" text="Costo" />
+                        <TableColumn fx:id="tcEstado" prefWidth="75.0" text="Estado" />
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                    </columnResizePolicy>
+                </TableView>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
