--- a/src/main/resources/gimnasiouq/adminMembresia.fxml
+++ b/src/main/resources/gimnasiouq/adminMembresia.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -13,24 +15,27 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.RecepMembresiaViewController">
+<AnchorPane prefHeight="424.0" prefWidth="656.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.AdminMembresiaViewController">
     <children>
-        <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox layoutX="30.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gestión Membresia" wrappingWidth="351.68359375">
+                <Text strokeWidth="0.0" text="Gestión Membresia" wrappingWidth="281.68359375">
                     <font>
-                        <Font name="Calisto MT Bold" size="30.0" />
+                        <Font name="Times New Roman" size="25.0" />
                     </font>
+                    <VBox.margin>
+                        <Insets left="10.0" top="10.0" />
+                    </VBox.margin>
                 </Text>
-                <GridPane>
+                <Separator prefHeight="19.0" prefWidth="656.0" />
+                <GridPane prefHeight="60.0" prefWidth="636.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="147.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="177.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="185.0" minWidth="10.0" prefWidth="167.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="155.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
@@ -55,43 +60,66 @@
                                 <Font name="Arial" size="14.0" />
                             </font>
                         </Text>
-                        <TextField fx:id="txtFechaFin" prefHeight="32.0" prefWidth="131.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                        <TextField fx:id="txtCosto" prefHeight="86.0" prefWidth="138.0" GridPane.columnIndex="3" />
-                        <TextField fx:id="txtFechaInicio" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <ComboBox fx:id="comboBoxPlanMembresia" prefHeight="26.0" prefWidth="163.0" GridPane.columnIndex="1" />
+                        <TextField fx:id="txtFechaFin" prefHeight="9.0" prefWidth="133.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <TextField fx:id="txtCosto" prefHeight="11.0" prefWidth="128.0" GridPane.columnIndex="3" />
+                        <TextField fx:id="txtFechaInicio" prefHeight="25.0" prefWidth="163.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <ComboBox fx:id="comboBoxPlanMembresia" prefHeight="27.0" prefWidth="192.0" GridPane.columnIndex="1" />
                     </children>
+                    <VBox.margin>
+                        <Insets right="5.0" />
+                    </VBox.margin>
                 </GridPane>
-                <GridPane alignment="CENTER" prefHeight="44.0" prefWidth="590.0">
+                <Separator prefHeight="8.0" prefWidth="656.0" />
+                <GridPane prefHeight="31.0" prefWidth="590.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="225.0" minWidth="10.0" prefWidth="76.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="87.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.0" minWidth="10.0" prefWidth="82.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="230.0" minWidth="10.0" prefWidth="81.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#onNuevo" text="Nuevo" GridPane.halignment="CENTER" />
-                        <Button fx:id="btnAsignar" mnemonicParsing="false" onAction="#onAsignar" text="Asignar" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-                        <Button fx:id="btnActualizar" mnemonicParsing="false" onAction="#onActualizar" text="Actualizar" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
-                        <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#onEliminar" text="Eliminar" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
+                        <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#onNuevo" text="Nuevo" GridPane.halignment="CENTER">
+                            <font>
+                                <Font name="Times New Roman" size="12.0" />
+                            </font></Button>
+                        <Button fx:id="btnAsignar" mnemonicParsing="false" onAction="#onAsignar" prefHeight="22.0" prefWidth="68.0" text="Asignar" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                            <font>
+                                <Font name="Times New Roman" size="12.0" />
+                            </font></Button>
+                        <Button fx:id="btnActualizar" mnemonicParsing="false" onAction="#onActualizar" prefHeight="22.0" prefWidth="70.0" text="Actualizar" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                            <font>
+                                <Font name="Times New Roman" size="12.0" />
+                            </font></Button>
+                        <Button fx:id="btnEliminar" mnemonicParsing="false" onAction="#onEliminar" prefHeight="22.0" prefWidth="61.0" text="Eliminar" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+                            <font>
+                                <Font name="Times New Roman" size="12.0" />
+                            </font></Button>
                     </children>
+                    <VBox.margin>
+                        <Insets left="165.0" right="165.0" />
+                    </VBox.margin>
                 </GridPane>
-                <TableView fx:id="tableView" prefHeight="0.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+                <Separator prefHeight="8.0" prefWidth="656.0" />
+                <TableView fx:id="tableView" maxWidth="1.7976931348623157E308" prefHeight="222.0" prefWidth="717.0" VBox.vgrow="ALWAYS">
                     <columns>
-                        <TableColumn fx:id="tcUsuario" prefWidth="75.0" text="Usuario" />
-                        <TableColumn fx:id="tcNombre" prefWidth="75.0" text="Nombre" />
-                        <TableColumn fx:id="tcIdentificacion" prefWidth="75.0" text="Identificación" />
-                        <TableColumn fx:id="tcFechaInicio" prefWidth="75.0" text="Fecha Inicio" />
-                        <TableColumn fx:id="tcFechaFin" prefWidth="75.0" text="Fecha Fin" />
-                        <TableColumn fx:id="tcPlan" prefWidth="75.0" text="Plan" />
-                        <TableColumn fx:id="tcCosto" prefWidth="75.0" text="Costo" />
-                        <TableColumn fx:id="tcEstado" prefWidth="75.0" text="Estado" />
+                        <TableColumn fx:id="tcUsuario" prefWidth="66.0" text="Usuario" />
+                        <TableColumn fx:id="tcNombre" prefWidth="68.0" text="Nombre" />
+                        <TableColumn fx:id="tcIdentificacion" prefWidth="102.0" text="Identificación" />
+                        <TableColumn fx:id="tcFechaInicio" prefWidth="97.0" text="Fecha Inicio" />
+                        <TableColumn fx:id="tcFechaFin" prefWidth="73.0" text="Fecha Fin" />
+                        <TableColumn fx:id="tcPlan" prefWidth="68.0" text="Plan" />
+                        <TableColumn fx:id="tcCosto" prefWidth="61.0" text="Costo" />
+                        <TableColumn fx:id="tcEstado" prefWidth="63.0" text="Estado" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                     </columnResizePolicy>
+                    <VBox.margin>
+                        <Insets />
+                    </VBox.margin>
                 </TableView>
             </children>
         </VBox>
