--- a/src/main/resources/gimnasiouq/adminReporteUsuario.fxml
+++ b/src/main/resources/gimnasiouq/adminReporteUsuario.fxml
@@ -1,14 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="gimnasiouq.viewcontroller.AdminReporteUsuarioViewController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.AdminReporteViewController">
+    <children>
+        <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reporte Usuario">
+            <font>
+                <Font name="Times New Roman" size="25.0" />
+            </font>
+        </Text>
+        <Separator layoutX="-2.0" layoutY="41.0" prefHeight="12.0" prefWidth="606.0" AnchorPane.bottomAnchor="350.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
+        <GridPane layoutX="49.0" layoutY="57.0" prefHeight="90.0" prefWidth="540.0" AnchorPane.bottomAnchor="260.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Usuarios con mensualidad activa:" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Usuarios sin mensualidad activa:" GridPane.rowIndex="1" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total usuarios activos:" GridPane.rowIndex="2" />
+                <Label fx:id="lblUsuariosConMensualidadActiva" text="usuariosConMensualidadActiva" GridPane.columnIndex="1" />
+                <Label fx:id="lblUsuariosSinMensualidadActiva" text="usuariosSinMensualidadActiva" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label fx:id="lblUsuariosActivos" text="usuariosActivos" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            </children>
+        </GridPane>
+        <Separator layoutX="144.0" layoutY="148.0" prefWidth="200.0" AnchorPane.bottomAnchor="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="140.0" />
+        <TableView layoutX="170.0" layoutY="164.0" prefHeight="199.0" prefWidth="393.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="150.0">
+            <columns>
+                <TableColumn fx:id="tcUsuario" prefWidth="142.0" text="Usuario" />
+                <TableColumn fx:id="tcNombre" prefWidth="159.0" text="Nombre" />
+                <TableColumn fx:id="tcIdentificacion" prefWidth="166.0" text="Identificacion" />
+                <TableColumn fx:id="tcEstado" prefWidth="132.0" text="Estado" />
+            </columns>
+        </TableView>
+    </children>
+    <padding>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+    </padding>
 </AnchorPane>
