--- a/src/main/resources/gimnasiouq/recepReporteMembresia.fxml
+++ b/src/main/resources/gimnasiouq/recepReporteMembresia.fxml
@@ -1,14 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="gimnasiouq.viewcontroller.RecepReporteMembresiaViewController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.RecepReporteViewController">
+    <children>
+        <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reporte Membresia">
+            <font>
+                <Font name="Times New Roman" size="25.0" />
+            </font>
+        </Text>
+        <Separator layoutX="13.0" layoutY="40.0" prefHeight="18.0" prefWidth="585.0" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
+        <GridPane hgap="10.0" layoutY="60.0" prefHeight="90.0" prefWidth="339.0" AnchorPane.bottomAnchor="260.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="260.0" AnchorPane.topAnchor="50.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="290.0" minWidth="10.0" prefWidth="165.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="10.0" prefWidth="164.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Membresias totales:" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Membresias con valor:" GridPane.rowIndex="1" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Membresias sin valor:" GridPane.rowIndex="2" />
+                <Label fx:id="lblmembresiasTotales" text="membresiasTotales" GridPane.columnIndex="1" />
+                <Label fx:id="lblmembresiasConValor" text="membresiasConValor" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label fx:id="lblmembresiasSinValor" text="membresiasSinValor" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Label fx:id="lblIngresosTotales" text="ingresosTotales" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Ingresos totales:" GridPane.rowIndex="3" />
+            </children>
+        </GridPane>
+        <Separator layoutY="140.0" prefHeight="17.0" prefWidth="606.0" AnchorPane.bottomAnchor="245.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="135.0" />
+        <TableView layoutX="13.0" layoutY="145.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="147.0">
+            <columns>
+                <TableColumn fx:id="tcTipoMembresia" prefWidth="120.0" text="Tipo Membresia" />
+                <TableColumn fx:id="tcPlanMembresia" prefWidth="127.0" text="Plan Membresia" />
+                <TableColumn fx:id="tcFechaInicio" prefWidth="103.0" text="Fecha Inicio" />
+                <TableColumn fx:id="tcFechaVencimiento" prefWidth="134.0" text="Fecha Vencimiento" />
+                <TableColumn fx:id="tcCosto" prefWidth="115.0" text="Costo" />
+            </columns>
+        </TableView>
+    </children>
+    <padding>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+    </padding>
 </AnchorPane>
