--- a/src/main/resources/gimnasiouq/adminReporteClase.fxml
+++ b/src/main/resources/gimnasiouq/adminReporteClase.fxml
@@ -45,7 +45,7 @@
                   <Font name="Times New Roman" size="12.0" />
                </font>
             </Label>
-            <Label fx:id="lblTotalClasesReversadas" text="totalClasesReservadas" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Label fx:id="lblTotalClasesReservadas" text="totalClasesReservadas" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font name="Times New Roman" size="12.0" />
                </font>
@@ -53,7 +53,7 @@
          </children>
       </GridPane>
       <Separator layoutX="20.0" layoutY="126.0" prefHeight="14.0" prefWidth="600.0" AnchorPane.bottomAnchor="260.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="126.0" />
-      <TableView layoutX="38.0" layoutY="151.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="135.0">
+      <TableView fx:id="tableClases" layoutX="38.0" layoutY="151.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="135.0">
         <columns>
           <TableColumn fx:id="tcClase" prefWidth="92.0" text="Clase" />
           <TableColumn fx:id="tcHorario" prefWidth="91.0" text="Horario" />
