--- a/src/main/resources/gimnasiouq/adminReporteUsuario.fxml
+++ b/src/main/resources/gimnasiouq/adminReporteUsuario.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.AdminReporteViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.AdminReporteUsuarioViewController">
     <children>
         <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reporte Usuario">
             <font>
@@ -34,14 +34,14 @@
             <children>
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Usuarios con mensualidad activa:" />
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Usuarios sin mensualidad activa:" GridPane.rowIndex="1" />
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total usuarios activos:" GridPane.rowIndex="2" />
-                <Label fx:id="lblUsuariosConMensualidadActiva" text="usuariosConMensualidadActiva" GridPane.columnIndex="1" />
-                <Label fx:id="lblUsuariosSinMensualidadActiva" text="usuariosSinMensualidadActiva" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <Label fx:id="lblUsuariosActivos" text="usuariosActivos" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total usuarios:" GridPane.rowIndex="2" />
+                <Label fx:id="lblMembresiasActivas" text="usuariosConMensualidadActiva" GridPane.columnIndex="1" />
+                <Label fx:id="lblMembresiasInactivas" text="usuariosSinMensualidadActiva" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label fx:id="lblTotalUsuarios" text="usuariosActivos" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </children>
         </GridPane>
         <Separator layoutX="144.0" layoutY="148.0" prefWidth="200.0" AnchorPane.bottomAnchor="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="140.0" />
-        <TableView layoutX="170.0" layoutY="164.0" prefHeight="199.0" prefWidth="393.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="150.0">
+        <TableView fx:id="tableUsuarios" layoutX="170.0" layoutY="164.0" prefHeight="199.0" prefWidth="393.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="150.0">
             <columns>
                 <TableColumn fx:id="tcUsuario" prefWidth="142.0" text="Usuario" />
                 <TableColumn fx:id="tcNombre" prefWidth="159.0" text="Nombre" />
