--- a/src/main/resources/gimnasiouq/recepReporteClase.fxml
+++ b/src/main/resources/gimnasiouq/recepReporteClase.fxml
@@ -12,60 +12,59 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.RecepReporteClaseViewController">
-    <children>
-        <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reporte de Clase">
-            <font>
-                <Font name="Times New Roman" size="25.0" />
-            </font>
-        </Text>
-        <Separator layoutX="-1.0" layoutY="34.0" prefHeight="20.0" prefWidth="600.0" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
-        <GridPane hgap="10.0" layoutX="6.0" layoutY="50.0" prefHeight="90.0" prefWidth="297.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="303.0">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="144.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="143.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Clase mas reservada:">
-                    <font>
-                        <Font name="Times New Roman" size="12.0" />
-                    </font>
-                </Text>
-                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total de clases reservadas:" GridPane.rowIndex="1">
-                    <font>
-                        <Font name="Times New Roman" size="12.0" />
-                    </font>
-                </Text>
-                <Label fx:id="lbClaseMasReservada" text="claseMasReservada" GridPane.columnIndex="1">
-                    <font>
-                        <Font name="Times New Roman" size="12.0" />
-                    </font>
-                </Label>
-                <Label fx:id="lbTotalClasesReversadas" text="totalClasesReservadas" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                    <font>
-                        <Font name="Times New Roman" size="12.0" />
-                    </font>
-                </Label>
-            </children>
-        </GridPane>
-        <Separator layoutX="20.0" layoutY="126.0" prefHeight="14.0" prefWidth="600.0" AnchorPane.bottomAnchor="260.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="126.0" />
-        <TableView layoutX="38.0" layoutY="151.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="135.0">
-            <columns>
-                <TableColumn fx:id="tcClase" prefWidth="92.0" text="Clase" />
-                <TableColumn fx:id="tcHorario" prefWidth="91.0" text="Horario" />
-                <TableColumn fx:id="tcFecha" prefWidth="89.0" text="Fecha" />
-                <TableColumn fx:id="tcEntrenador" prefWidth="105.0" text="Entrenador" />
-                <TableColumn fx:id="tcIdUsuario" prefWidth="87.0" text="ID Usuario" />
-                <TableColumn fx:id="tcCupoMaximo" prefWidth="135.0" text="Cupo Maximo" />
-            </columns>
-        </TableView>
-    </children>
-    <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-    </padding>
+   <children>
+      <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reporte de Clase">
+         <font>
+            <Font name="Times New Roman" size="25.0" />
+         </font>
+      </Text>
+      <Separator layoutX="-1.0" layoutY="34.0" prefHeight="20.0" prefWidth="600.0" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
+      <GridPane hgap="10.0" layoutX="6.0" layoutY="50.0" prefHeight="90.0" prefWidth="297.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="303.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="144.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="247.0" minWidth="10.0" prefWidth="143.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Clase mas reservada:">
+               <font>
+                  <Font name="Times New Roman" size="12.0" />
+               </font>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total de clases reservadas:" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Times New Roman" size="12.0" />
+               </font>
+            </Text>
+            <Label fx:id="lblClaseMasReservada" text="claseMasReservada" GridPane.columnIndex="1">
+               <font>
+                  <Font name="Times New Roman" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="lblTotalClasesReservadas" text="totalClasesReservadas" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Times New Roman" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
+      <Separator layoutX="20.0" layoutY="126.0" prefHeight="14.0" prefWidth="600.0" AnchorPane.bottomAnchor="260.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="126.0" />
+      <TableView fx:id="tableClases" layoutX="38.0" layoutY="151.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="135.0">
+        <columns>
+          <TableColumn fx:id="tcClase" prefWidth="92.0" text="Clase" />
+          <TableColumn fx:id="tcHorario" prefWidth="91.0" text="Horario" />
+            <TableColumn fx:id="tcFecha" prefWidth="89.0" text="Fecha" />
+            <TableColumn fx:id="tcEntrenador" prefWidth="105.0" text="Entrenador" />
+            <TableColumn fx:id="tcIdUsuario" prefWidth="87.0" text="ID Usuario" />
+            <TableColumn fx:id="tcCupoMaximo" prefWidth="135.0" text="Cupo Maximo" />
+        </columns>
+      </TableView>
+   </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </AnchorPane>
