--- a/src/main/resources/gimnasiouq/recepReporteMembresia.fxml
+++ b/src/main/resources/gimnasiouq/recepReporteMembresia.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.RecepReporteViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gimnasiouq.viewcontroller.RecepReporteMembresiaViewController">
     <children>
         <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reporte Membresia">
             <font>
@@ -44,7 +44,7 @@
             </children>
         </GridPane>
         <Separator layoutY="140.0" prefHeight="17.0" prefWidth="606.0" AnchorPane.bottomAnchor="245.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="135.0" />
-        <TableView layoutX="13.0" layoutY="145.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="147.0">
+        <TableView fx:id="tableMembresias" layoutX="13.0" layoutY="145.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="147.0">
             <columns>
                 <TableColumn fx:id="tcTipoMembresia" prefWidth="120.0" text="Tipo Membresia" />
                 <TableColumn fx:id="tcPlanMembresia" prefWidth="127.0" text="Plan Membresia" />
